<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03C1AF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="200dp"
            android:background="#FF5722"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_test"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.156" />

        <RadioButton
            android:id="@+id/F_TO_C"
            style="@style/NameStyle"

            android:layout_marginTop="75dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/F_TO_C"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#000000"
            android:textCursorDrawable="@color/design_default_color_on_secondary"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.114" />

        <RadioButton
            android:id="@+id/C_TO_F"
            style="@style/NameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="60dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/C_TO_F"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/F_TO_C"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/F_TO_C"
            app:layout_constraintTop_toTopOf="@+id/F_TO_C"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/enter_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_temp"
            android:inputType="number"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/C_TO_F"
            app:layout_constraintStart_toStartOf="@+id/C_TO_F"
            app:layout_constraintTop_toBottomOf="@+id/C_TO_F"
            app:layout_constraintVertical_bias="0.149" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#EF5D2F"
            android:fontFamily="@font/roboto"
            android:hapticFeedbackEnabled="true"
            android:text="@string/convert_button"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/enter_temp"
            app:layout_constraintStart_toStartOf="@+id/enter_temp"
            app:layout_constraintTop_toBottomOf="@+id/enter_temp"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#000000"
            android:hint="@string/select_text"
            android:textColorHint="#FFE500"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/F_TO_C"
            app:layout_constraintStart_toStartOf="@+id/F_TO_C"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/temp_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="#55F3E4"
            android:fontFamily="@font/roboto"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColorHighlight="#FF1E1E"
            android:textColorHint="#FF0909"
            android:textColorLink="#89E61C"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convert_button"
            app:layout_constraintVertical_bias="0.221"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
